fix(assets): resolve under BASE_URL without leading slash; update site title/meta

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Neural - GenAI & Backend Engineer</title>
-    <meta name="description" content="Portfolio of Alex Neural - GenAI & Backend Engineer specializing in scalable AI systems, data pipelines, and intelligent model deployment." />
-    <meta name="author" content="Alex Neural" />
+    <title>Abir Dey - GenAI & Backend Engineer</title>
+    <meta name="description" content="Portfolio of Abir Dey - GenAI & Backend Engineer specializing in scalable AI systems, data pipelines, and intelligent model deployment." />
+    <meta name="author" content="Abir Dey" />
 
-    <meta property="og:title" content="Alex Neural - GenAI & Backend Engineer" />
-    <meta property="og:description" content="Portfolio showcasing cutting-edge AI engineering and backend architecture projects. Specializing in neural networks, data pipelines, and scalable systems." />
+    <meta property="og:title" content="Abir Dey - GenAI & Backend Engineer" />
+    <meta property="og:description" content="Portfolio showcasing GenAI engineering and backend architecture projects. Specializing in LLMs, data pipelines, and scalable systems." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
